--- a/walking_distance.ipynb
+++ b/walking_distance.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "be2abcc7",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
     "                        node_size = 0)\n",
     "\n",
     "gdf.plot(ax = ax, color = iso_colors, ec = 'none', alpha = 0.6, zorder = -1)\n",
-    "fig.savefig('images/walking_distance.png', dpi = 100)\n",
+    "fig.savefig('images/walking_distance.png', dpi = 100, bbox_inches = 'tight')\n",
     "plt.show()"
    ]
   },
